# bug_bounty

./: .gitignore  README.md  misconfig-corpus.md  pyproject.toml  test-ips.txt  token-validation-corpus.md  ui-spec.md
audit/: phase-1-2-audit.md
bounty/: __init__.py  cli.py  config.py  db.py  events.py  exceptions.py  models.py  scheduler.py  ulid.py
bounty.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
bounty/ai/: __init__.py  client.py  dedup.py  report_polish.py  severity_check.py
bounty/detect/: __init__.py  _fingerprint_helpers.py  base.py  nuclei_detection.py  nuclei_runner.py  runner.py
bounty/errors/: __init__.py
bounty/fingerprint/: __init__.py  body.py  cookies.py  favicon.py  headers.py  tls.py
bounty/integrations/: __init__.py  _base.py  discord.py  jira.py  linear.py  slack.py
bounty/intel/: __init__.py  cache.py  shodan.py
bounty/recon/: __init__.py  banner_grab.py  http_probe.py  ip_ranges.py  port_scan.py  rate_manager.py  resolve.py  stealth.py  subdomains.py
bounty/report/: __init__.py
bounty/secrets/: __init__.py  patterns.py  scanner.py  trufflehog.py
bounty/seed/: __init__.py
bounty/targets/: __init__.py  bugcrowd.py  h1.py  intigriti.py  manual.py
bounty/ui/: __init__.py  app.py  sse.py  (+2 more)
docs/: UI_AUDIT.md
tests/: phase2_check.py  smoke.py  test_phase10.py  test_phase11.py  test_phase12.py  test_phase13.py  test_phase13_5.py  test_phase14a.py  test_phase14b.py  test_phase16.py  test_phase17.py  test_phase18.py  test_phase2.py  test_phase2_7.py  test_phase2_8.py  test_phase3.py  test_phase4.py  test_phase5.py  test_phase6.py  test_phase7_1.py  test_phase7_2.py  test_phase7_3a.py  test_phase7_3b.py  test_phase7_4a.py  test_phase7_4b.py  test_phase8.py  test_phase9.py  test_program_create_form.py  test_ui_smoke.py
(+179 files in other folders)
