[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bounty"
version = "0.1.0"
description = "Personal bug bounty automation system"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.9",

    # HTTP client
    "httpx[http2]>=0.27.0",

    # Data / validation
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",

    # Scheduling
    "apscheduler>=3.10.4",

    # Fingerprinting
    "bs4>=0.0.2",
    "lxml>=5.2.0",
    "chardet>=5.2.0",
    "mmh3>=4.1.0",

    # Browser automation
    "playwright>=1.44.0",

    # CLI
    "typer>=0.12.3",

    # Logging
    "structlog>=24.2.0",

    # Async helpers
    "anyio>=4.4.0",
    "aiosqlite>=0.19.0",

    # YAML parsing (manual targets)
    "pyyaml>=6.0.1",

    # DNS resolution
    "dnspython>=2.6.0",

    # Cryptographic utilities
    "cryptography>=42.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "mypy>=1.10.0",
    "ruff>=0.4.7",
    "httpx>=0.27.0",   # already in main, explicit for tests
]

[project.scripts]
bounty = "bounty.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["bounty*"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = ["integration: requires live network access (DNS / HTTP)"]
addopts = "-m 'not integration'"

